--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,38 @@ jobs:
         if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
           echo "📝 Message: ${{ github.event.inputs.deploy_message }}"
         fi
-
+        
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    # Set Firebase environment variables directly from secrets
+    - name: Set Firebase credentials
+      run: |
+        echo "FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}" >> $GITHUB_ENV
+        echo "FIREBASE_CLIENT_EMAIL=${{ secrets.FIREBASE_CLIENT_EMAIL }}" >> $GITHUB_ENV
+        echo "FIREBASE_PRIVATE_KEY=${{ secrets.FIREBASE_PRIVATE_KEY }}" >> $GITHUB_ENV
+        echo "FIREBASE_PRIVATE_KEY_ID=${{ secrets.FIREBASE_PRIVATE_KEY_ID }}" >> $GITHUB_ENV
+        echo "FIREBASE_CLIENT_ID=${{ secrets.FIREBASE_CLIENT_ID }}" >> $GITHUB_ENV
+        echo "FIREBASE_CLIENT_CERT_URL=${{ secrets.FIREBASE_CLIENT_CERT_URL }}" >> $GITHUB_ENV
+        # Set default values for optional fields
+        echo "FIREBASE_AUTH_URI=https://accounts.google.com/o/oauth2/auth" >> $GITHUB_ENV
+        echo "FIREBASE_TOKEN_URI=https://oauth2.googleapis.com/token" >> $GITHUB_ENV 
+        echo "FIREBASE_AUTH_PROVIDER_CERT_URL=https://www.googleapis.com/oauth2/v1/certs" >> $GITHUB_ENV
+        
+    # Create frontend .env file with Firebase web config
+    - name: Create frontend environment file
+      run: |
+        cat << EOF > frontend/.env
+        REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }}
+        REACT_APP_FIREBASE_AUTH_DOMAIN=${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
+        REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
+        REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
+        REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
+        REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }}
+        REACT_APP_POST_HOG_API_KEY=${{ secrets.REACT_APP_POST_HOG_API_KEY }}
+        EOF
+        chmod 600 frontend/.env
+    
     - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
@@ -40,10 +68,29 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/syntextai:latest
-        file: ./Dockerfile
+        tags: osasdeeon/syntextai:latest
+        cache-from: type=registry,ref=osasdeeon/syntextai:buildcache
+        cache-to: type=registry,ref=osasdeeon/syntextai:buildcache,mode=max
+        build-args: |
+          REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }}
+          REACT_APP_FIREBASE_AUTH_DOMAIN=${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
+          REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
+          REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
+          REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
+          REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }}
+          REACT_APP_STRIPE_API_KEY=${{ secrets.REACT_APP_STRIPE_API_KEY }}
+          REACT_APP_POST_HOG_API_KEY=${{ secrets.REACT_APP_POST_HOG_API_KEY }}
+          FIREBASE_PROJECT_ID=${{ env.FIREBASE_PROJECT_ID }}
+          FIREBASE_PRIVATE_KEY=${{ env.FIREBASE_PRIVATE_KEY }}
+          FIREBASE_CLIENT_EMAIL=${{ env.FIREBASE_CLIENT_EMAIL }}
+          FIREBASE_PRIVATE_KEY_ID=${{ env.FIREBASE_PRIVATE_KEY_ID }}
+          FIREBASE_CLIENT_ID=${{ env.FIREBASE_CLIENT_ID }}
+          FIREBASE_CLIENT_CERT_URL=${{ env.FIREBASE_CLIENT_CERT_URL }}
+          FIREBASE_AUTH_URI=${{ env.FIREBASE_AUTH_URI }}
+          FIREBASE_TOKEN_URI=${{ env.FIREBASE_TOKEN_URI }}
+          FIREBASE_AUTH_PROVIDER_CERT_URL=${{ env.FIREBASE_AUTH_PROVIDER_CERT_URL }}
 
-    - name: Copy deploy files to server
+    - name: Copy deploy files to Digital Ocean
       uses: appleboy/scp-action@v0.1.3
       with:
         host: ${{ secrets.DO_HOST }}
@@ -52,7 +99,7 @@ jobs:
         source: "deploy.sh,docker-compose.yml"
         target: "/home/root/"
 
-    - name: Deploy to server
+    - name: Deploy to Digital Ocean
       uses: appleboy/ssh-action@v0.1.10
       with:
         host: ${{ secrets.DO_HOST }}
@@ -61,25 +108,18 @@ jobs:
         script_stop: true
         script: |
           cd /home/root/
-          docker pull ${{ secrets.DOCKER_USERNAME }}/syntextai:latest
-
-          # Write .env file
-          cat > .env << 'EOF'
-          # Frontend/Firebase
-          REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }}
-          REACT_APP_FIREBASE_AUTH_DOMAIN=${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
-          REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
-          REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
-          REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
-          REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }}
-          REACT_APP_STRIPE_API_KEY=${{ secrets.REACT_APP_STRIPE_API_KEY }}
-          REACT_APP_STRIPE_SECRET=${{ secrets.REACT_APP_STRIPE_SECRET }}
-          REACT_APP_STRIPE_ENDPOINT_SECRET=${{ secrets.REACT_APP_STRIPE_ENDPOINT_SECRET }}
-          REACT_APP_POST_HOG_API_KEY=${{ secrets.REACT_APP_POST_HOG_API_KEY }}
-
-          # Backend Firebase Admin
+          docker pull osasdeeon/syntextai:latest
+          
+          # Create .env file with required environment variables
+          cat > .env << 'EOL'
+          DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
+          SECRET_KEY=${{ secrets.SECRET_KEY }}
+          ALGORITHM=HS256
+          ACCESS_TOKEN_EXPIRE_MINUTES=43200
+          ALLOWED_ORIGINS=*
+          
+          # Firebase Configuration
           FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
-          FIREBASE_PRIVATE_KEY=${{ secrets.FIREBASE_PRIVATE_KEY }}
           FIREBASE_CLIENT_EMAIL=${{ secrets.FIREBASE_CLIENT_EMAIL }}
           FIREBASE_PRIVATE_KEY_ID=${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
           FIREBASE_CLIENT_ID=${{ secrets.FIREBASE_CLIENT_ID }}
@@ -87,23 +127,16 @@ jobs:
           FIREBASE_AUTH_URI=https://accounts.google.com/o/oauth2/auth
           FIREBASE_TOKEN_URI=https://oauth2.googleapis.com/token
           FIREBASE_AUTH_PROVIDER_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
-          EOF
-
-          chmod 600 .env
+          EOL
           
-          # Debug: Show .env file contents (redacted)
-          echo "=== .env file contents ==="
-          sed 's/PRIVATE_KEY=.*/PRIVATE_KEY=***REDACTED***/g' .env | sed 's/SECRET=.*/SECRET=***REDACTED***/g'
-          echo "========================="
-
-          # Write credentials.json
+          # Create Firebase credentials directory and file with proper JSON formatting
           mkdir -p api/config
-          cat > api/config/credentials.json << 'EOF'
+          cat > api/config/credentials.json << 'EOL'
           {
             "type": "service_account",
             "project_id": "${{ secrets.FIREBASE_PROJECT_ID }}",
             "private_key_id": "${{ secrets.FIREBASE_PRIVATE_KEY_ID }}",
-            "private_key": "${{ secrets.FIREBASE_PRIVATE_KEY }}",
+            "private_key": "$(echo "${{ secrets.FIREBASE_PRIVATE_KEY }}" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')",
             "client_email": "${{ secrets.FIREBASE_CLIENT_EMAIL }}",
             "client_id": "${{ secrets.FIREBASE_CLIENT_ID }}",
             "auth_uri": "https://accounts.google.com/o/oauth2/auth",
@@ -112,14 +145,20 @@ jobs:
             "client_x509_cert_url": "${{ secrets.FIREBASE_CLIENT_CERT_URL }}",
             "universe_domain": "googleapis.com"
           }
-          EOF
-
+          EOL
+          
+          # Set secure permissions
+          chmod 600 .env
           chmod 600 api/config/credentials.json
-
-          # Run deploy
+          
+          # Make sure the deploy script is executable and run it
           chmod +x deploy.sh
-          ./deploy.sh || {
-            echo "⚠️ Deploy script failed, restarting containers..."
+          
+          # Run deploy script - handle errors gracefully
+          ./deploy.sh || { 
+            echo "⚠️ Deploy script failed, but proceeding with container restart..."
+            # Stop previous container if running
             docker-compose down || true
+            # Start new container with updated image
             docker-compose up -d
           }
